outputs.OLD/production-metadata/HEAL-33054/unpackaged/unpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>DateOfBirth__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Date_Plus_30_Seconds__c</fullName>
        <formula>CreatedDate + 0.00066</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Date Plus 30 Seconds</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Annual_Lab__c</fullName>
        <formula>TODAY() -  Last_Annual_Lab_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Annual Lab</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Annual_Physical__c</fullName>
        <formula>TODAY() -  Last_Annual_Physical__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Annual Physical</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Diagnosed_with_high_blood_pressure__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Diagnosed with high blood pressure?</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diagnosed_with_thyroid_problems__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Diagnosed with thyroid problems?</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Call_Date_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Do Not Call Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Do_Not_Sync_to_Biocanic__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used as entry criteria for relevant automations, If checked, such automations should stop assigning any Biocanic IDs or sending any Biocanic agreements.
Should be editable by all users who have permission to create new accounts (Wellness Advisors and 10X Employees).</description>
        <label>Do Not Sync to Biocanic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DrChrono_Default_Office_Id__c</fullName>
        <description>This will hold the default office id for the doctors. This is to be used to create appointments in the EHR from Salesforce.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>DrChrono Default Office Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DrChrono_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This is the External Id from the DrChrono platform</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>DrChrono Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DrChrono_Last_Sync__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DrChrono Last Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DrChrono_Link__c</fullName>
        <formula>IF(NOT(ISNULL(DrChrono_Id__c)),
HYPERLINK(&quot;https://drchrono.com/patient_demographics/&quot; + DrChrono_Id__c, &quot;Patient Demographic Link&quot;), &quot;Patient Not Synced to DrChrono&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DrChrono Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DrChrono_Practice_Group__c</fullName>
        <formula>IF(NOT(ISNULL(Main_Practitioner__c)),
Main_Practitioner__r.Practice_Group__r.Name,
&quot;Patient Not Synced to DrChrono&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DrChrono Practice Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DrChrono_Sync_Message__c</fullName>
        <description>The response text from the DrChrono API sync status</description>
        <encryptionScheme>None</encryptionScheme>
        <label>DrChrono Sync Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DrChrono_Synced__c</fullName>
        <formula>IF(ISNULL(DrChrono_Last_Sync__c) , FALSE,TRUE)</formula>
        <label>DrChrono Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Driver_s_License__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Driver&apos;s License</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Drivers_License_Issuing_State__c</fullName>
        <description>This will be the State the Drivers Licenses is Issued In</description>
        <inlineHelpText>Select the state where the driver&apos;s license was issued.</inlineHelpText>
        <label>Drivers License Issuing State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Opt_Out_Date_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Opt Out Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Subscribed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Subscribed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Credit_Status__c</fullName>
        <formula>IF( Current_Employee_Credit_YTD__c &gt; 0,  IMAGE(&quot;img/msg_icons/confirm16.png&quot;, &quot;In Good Standing&quot; , 16, 16), IMAGE(&quot;img/msg_icons/error16.png&quot;, &quot;Credit Limit Exceed&quot; , 16, 16))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employee Credit Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Event Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_User_Id__c</fullName>
        <description>(Manual Entered In, but from Shopify User Id)
This field is used when a new opportunity is created and has an External Seller Code filled in to link to the Owner Id field</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Shopify User Id</inlineHelpText>
        <label>External User Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FRP_Balance_Due__c</fullName>
        <label>FRP Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FRP_Invoice_Balance_Due__c</fullName>
        <label>FRP Invoice Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Familiarity_with_10XH_and_G_Brecka__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Familiarity with 10XH and G Brecka?</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Filter Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Responsible_Party__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This lookup field will help determine who&apos;s payment method this account has access to.</description>
        <inlineHelpText>Who is in-charge of paying for this account</inlineHelpText>
        <label>Financial Responsible Party</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Financial_Responsible_Party</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flow_Toggle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flow Toggle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Lab_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Follow Up Lab Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FormName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Form Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Source__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Form Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCLID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GCLID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GT_Oppty_Closed_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GT Oppty Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GainsWave_Provider__c</fullName>
        <label>GainsWave Provider</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>female</fullName>
                    <label>Female</label>
                </value>
                <value>
                    <fullName>male</fullName>
                    <label>Male</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <formula>IF( Opportunities_amount_in_the_last_year__c &gt;= 10000
, &apos;A&apos; , If( Opportunities_amount_in_the_last_year__c &gt;= 5000 ,&apos;B&apos;,&apos;C&apos;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gut_and_digestive_problems__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Gut and digestive problems?</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HASH_Latest_Opty_Won_CloseDate_Amount__c</fullName>
        <label>HASH Latest Opty Won: CloseDate&amp;Amount</label>
        <summarizedField>Opportunity.HASH_Close_Date_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.First_Shipping_Date__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>HRTInitialAssessmentPrice__c</fullName>
        <label>HRT Initial Assessment Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HRTProgramExperience__c</fullName>
        <label>HRT Program Experience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HRTTreatmentProgramPrice__c</fullName>
        <label>HRT Treatment Program Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HTTPUserAgent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HTTP User Agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Happy_with_current_weight_and_body_comp__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Happy with current weight and body comp?</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthGains_Account__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>HealthGains Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <inlineHelpText>This is in inches</inlineHelpText>
        <label>Height (inches)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hobbies__c</fullName>
        <label>Hobbies</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Art</fullName>
                </value>
                <value>
                    <fullName>Automobiles</fullName>
                </value>
                <value>
                    <fullName>Boating</fullName>
                </value>
                <value>
                    <fullName>Books</fullName>
                </value>
                <value>
                    <fullName>Collectibles</fullName>
                </value>
                <value>
                    <fullName>Cultural Events</fullName>
                </value>
                <value>
                    <fullName>Dining</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Fashion and Style</fullName>
                </value>
                <value>
                    <fullName>Fishing</fullName>
                </value>
                <value>
                    <fullName>Gardening</fullName>
                </value>
                <value>
                    <fullName>Golf</fullName>
                </value>
                <value>
                    <fullName>Handcrafts</fullName>
                </value>
                <value>
                    <fullName>Health And Exercise</fullName>
                </value>
                <value>
                    <fullName>Hunting</fullName>
                </value>
                <value>
                    <fullName>Jewelry</fullName>
                </value>
                <value>
                    <fullName>Motorcycles</fullName>
                </value>
                <value>
                    <fullName>Music</fullName>
                </value>
                <value>
                    <fullName>Outdoors</fullName>
                </value>
                <value>
                    <fullName>Philanthropy</fullName>
                </value>
                <value>
                    <fullName>Photography</fullName>
                </value>
                <value>
                    <fullName>Politics</fullName>
                </value>
                <value>
                    <fullName>Reading</fullName>
                </value>
                <value>
                    <fullName>Skiing</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Watches</fullName>
                </value>
                <value>
                    <fullName>Water Sports</fullName>
                </value>
                <value>
                    <fullName>Wine and Spirits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HowDidPatientLeadHearAboutUs__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>How Did Patient Lead Hear About Us</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_often_struggle_with_mental_health__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>How often struggle with mental health?</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_sustainable_is_your_daily_energy__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>How sustainable is your daily energy?</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_well_do_you_sleep__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>How well do you sleep?</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_would_you_rate_your_libido__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>How would you rate your libido?</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InactiveOnHoldReason__c</fullName>
        <label>Inactive - On Hold Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Money</fullName>
                </value>
                <value>
                    <fullName>Unable To Contact</fullName>
                </value>
                <value>
                    <fullName>Lost Interested</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Location</fullName>
                </value>
                <value>
                    <fullName>Medical Condition</fullName>
                </value>
                <value>
                    <fullName>PCP</fullName>
                </value>
                <value>
                    <fullName>Time</fullName>
                </value>
                <value>
                    <fullName>Ineligible</fullName>
                </value>
                <value>
                    <fullName>Invalid Number</fullName>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
                <value>
                    <fullName>Discharged</fullName>
                </value>
                <value>
                    <fullName>Fake</fullName>
                </value>
                <value>
                    <fullName>Account Deletion Requested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Income_Range__c</fullName>
        <label>Income Range</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IncorrectAddress__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to mark a record that did not pass automatic validation and requires administrator attention.</description>
        <label>IncorrectAddress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Price_Quoted__c</fullName>
        <label>Initial Price Quoted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InterestIn__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Interest In</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Balance_Due__c</fullName>
        <label>Invoice Balance Due</label>
        <summarizedField>Opportunity.Opportunity_Balance_Due__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Is_Invoice__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Is_Minor__c</fullName>
        <formula>IF( 
    TODAY() - DateOfBirth__c   &lt; 18*365.25,  
    true, 
    false 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Minor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issues__c</fullName>
        <label>Issues</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Difficult Person</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>Chargeback</fullName>
                </value>
                <value>
                    <fullName>See Notes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lab_Credit_Amount__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lab Credit Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lab_Credit_Type__c</fullName>
        <label>Lab Credit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aesthetics Credit</fullName>
                </value>
                <value>
                    <fullName>Sexual Wellness Credit</fullName>
                </value>
                <value>
                    <fullName>Lab Credit</fullName>
                </value>
                <value>
                    <fullName>Medication Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Annual_Lab_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Annual Lab Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Annual_Lab_Type__c</fullName>
        <label>Last Annual Lab Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Basic Female</fullName>
                </value>
                <value>
                    <fullName>Basic Male</fullName>
                </value>
                <value>
                    <fullName>Comprehensive Female</fullName>
                </value>
                <value>
                    <fullName>Comprehensive Male</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Annual_Physical__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Annual Physical</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Interaction_Method__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Interaction Method</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Marketing_Action__c</fullName>
        <description>We need a field to be able to exclude leads/contacts that perform a specific marketing campaign action (Ex. Registered to a webinar)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Marketing Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Medical_Consultation_Visit_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Medical Consultation Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Medical_Consultation_Visit_Type__c</fullName>
        <label>Last Medical Consultation Visit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Person</fullName>
                </value>
                <value>
                    <fullName>VSEE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Medication_Order_Amount__c</fullName>
        <label>Last Medication Order Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Last_Medication_Order_Date__c</fullName>
        <label>Last Medication Order Date</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Medication Opportunity Record Type</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Opportunity_Closed_Date__c</fullName>
        <label>Last Opportunity Closed Date</label>
        <summarizedField>Opportunity.CloseDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Approved, Lab Ordered, Lab Received, Physical Exam Scheduled, Physical Exam Completed, Medication Ordered, Medication Shipped, Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Opportunity_Record_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Opportunity Record Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Supplement_Nurture_Email_Sent__c</fullName>
        <description>This will signify when the last Supplement Nurture Email was done.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Supplement Nurture Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latest_Opty_Amount__c</fullName>
        <formula>VALUE(RIGHT(TEXT(HASH_Latest_Opty_Won_CloseDate_Amount__c), 10))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latest_Opty_Close_Date__c</fullName>
        <formula>DATE(
     VALUE(MID(TEXT(HASH_Latest_Opty_Won_CloseDate_Amount__c), 1, 4)),
     VALUE(MID(TEXT(HASH_Latest_Opty_Won_CloseDate_Amount__c), 5, 2)),
     VALUE(MID(TEXT(HASH_Latest_Opty_Won_CloseDate_Amount__c), 7, 2))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest Opty Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lead Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Created_Date_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lead Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_New_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lead New Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_Promotion_Offered__c</fullName>
        <label>Lead Promotion Offered</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Free B-12 Shot</fullName>
                </value>
                <value>
                    <fullName>Free Vitamin IV Infusion</fullName>
                </value>
                <value>
                    <fullName>Free InBody Body Composition Analysis</fullName>
                </value>
                <value>
                    <fullName>$199 Men&apos;s Health Month Special</fullName>
                </value>
                <value>
                    <fullName>$50 HealthGAINS Gift Card</fullName>
                </value>
                <value>
                    <fullName>Free Testosterone Test</fullName>
                </value>
                <value>
                    <fullName>Free EmSculpt</fullName>
                </value>
                <value>
                    <fullName>$99 Testosterone and Inbody Test</fullName>
                </value>
                <value>
                    <fullName>$99 Testosterone, B12 and Inbody Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>Traditional</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Total_Won_Cycle__c</fullName>
        <formula>TEXT(FLOOR((Converted_Date__c - Lead_New_Date__c)*24)) &amp;&apos; Hr &apos;&amp; TEXT(FLOOR(((((Converted_Date__c - Lead_New_Date__c)*24)-FLOOR((Converted_Date__c - Lead_New_Date__c)*24))*60)))&amp;&apos; Mins&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Total Won Cycle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Live Call</fullName>
                </value>
                <value>
                    <fullName>Live Chat</fullName>
                </value>
                <value>
                    <fullName>Call Center</fullName>
                </value>
                <value>
                    <fullName>Face-To-Face</fullName>
                </value>
                <value>
                    <fullName>Email Campaign</fullName>
                </value>
                <value>
                    <fullName>Text Message</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Database</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Business Development</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MainInterest__c</fullName>
        <label>Main Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HRT Program</fullName>
                </value>
                <value>
                    <fullName>Sexual Wellness Packages</fullName>
                </value>
                <value>
                    <fullName>Aesthetics Packages</fullName>
                </value>
                <value>
                    <fullName>Exosomes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>